feature/init-page: create style file and color variables

--- a/index.html
+++ b/index.html
@@ -2,13 +2,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Flexbox Training Page</title>
 </head>
 <body>
-    <main>
+    <main class="page-wrapper">       
+        <h1 class="page-title">Flexbox Training Page</h1>
         <section>
-            <h1>Flexbox Training Page</h1>
+            <h2 class="section-title">Justify content start</h2>
+            <div class="box-wrapper justify-content-start">
+               <div class="box red"></div>              
+            </div>
+            <h2 class="section-title">Justify content end</h2>
+            <div class="box-wrapper justify-content-end">
+                <div class="box pink"></div>           
+            </div>
+            <h2 class="section-title">Justify content center</h2>
+            <div class="box-wrapper justify-content-center">
+                <div class="box purple"></div>           
+            </div>
         </section>
     </main>
+    <!-- <div class="box blue"></div>
+    <div class="box cyan"></div>
+    <div class="box teal"></div>
+    <div class="box green"></div>
+    <div class="box light_green"></div> -->
 </body>
 </html>
+
+
+
+
+
